--- a/stylesheets/_home.scss
+++ b/stylesheets/_home.scss
@@ -1,7 +1,8 @@
 $content-width: 480px;
 $spacing: 40px;
-$text-color: #333;
-$white-space: #F9F9F9;
+$clr-text-main: #333;
+$clr-white-space: #F9F9F9;
+$clr-link: #C04;
 
 /*
  *  LAYERS
@@ -21,12 +22,11 @@ $white-space: #F9F9F9;
 }
 
 .layer-main-content {
-  // border: 1px solid black;
   z-index: 200;
   left: 50%;
   width: $content-width;
   margin-left: $content-width / -2;
-  background-color: $white-space;
+  background-color: $clr-white-space;
 }
 
 /*
@@ -94,32 +94,59 @@ $white-space: #F9F9F9;
 
 .main-content {
   padding: $spacing;
-  color: $text-color;
+  color: $clr-text-main;
+  text-align: center;
 
-  .avatar {
+  .home-avatar {
     display: block;
     border-radius: 100%;
     border: 1px solid transparent;
-    box-shadow: 0 0 0 1px $text-color;
+    box-shadow: 0 0 0 1px $clr-text-main;
     width: 80px;
     height: 80px;
-    float: left;
-    margin-bottom: $spacing / 2;
-    margin-right: $spacing / 2;
+    margin: 0px auto;
+    margin-bottom: $spacing;
   }
 
-  h1 {
+  .home-title {
     font-weight: normal;
-    font-size: 36px;
-    padding: 0;
-    margin: 0;
-    line-height: 82px;
+    font-size: 27px;
+    margin-bottom: $spacing / 2;
   }
 
-  p {
-    clear: both;
-    padding: 0;
-    margin: 0;
+  .home-bio {
     font-size: 18px;
+    margin-bottom: $spacing / 2;
+  }
+
+  .home-links {
+    margin-bottom: $spacing;
+    a {
+      color: $clr-link;
+
+    }
+  }
+
+  .home-social {
+    padding: 0;
+    li {
+      list-style: none;
+      display: inline-block;
+      font-size: 25px;
+      margin-right: $spacing / 2;
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      a {
+        color: $clr-text-main;
+        transition: color 100ms;
+
+        &:hover {
+          color: $clr-link;
+        }
+      }
+    }
   }
 }
