--- a/stylesheets/_reset.scss
+++ b/stylesheets/_reset.scss
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Nunito", "Helvetica Neue", Arial;
-  background-color: #666;
+  background-color: #333;
 }
 
 div, a {
@@ -19,4 +19,8 @@ a {
   &:hover {
     text-decoration: underline;
   }
+}
+
+ul {
+  margin: 0;
 }
